# ClawSeal

./: .gitignore  CHANGELOG.md  CLAIMS_REGISTRY.md  CLAWHUB.md  CONTRIBUTING.md  FRESH_INSTALL_VALIDATION.md  LICENSE  README.md  SECURITY.md  SIP_0006_SCROLL_NATIVE_MEMORY.md  SKILL.md  THREAT_MODEL.md  clawseal_dashboard_preview.html  demo_layer1_baseline.py  demo_layer2_with_clawseal.py  demo_layer2_with_mirra.py  demo_layer3_verification.py  pyproject.toml  requirements.txt  run_full_demo.sh  setup.sh
clawseal-openclaw-plugin/: install.sh
clawseal_core/: __init__.py  cli.py
clawseal_core/cli/: __init__.py  doctor.py  quickstart.py
clawseal_core/dashboard/: app.py
clawseal_core/dashboard/templates/: index.html
clawseal_core/memory/: __init__.py  scroll_memory_store.py
clawseal_core/security/: __init__.py  qseal_engine.py  qseal_utils.py
demo/expected_outputs/: DEMO_RUN_METADATA.md  allowed_witness_benign.json  blocked_witness_credentials.json  blocked_witness_shell.json  layer1_baseline_output.txt  layer2_with_mirra_output.txt  layer3_verification_output.txt
docs/: OPEN_CORE_BOUNDARY.md
openclaw-plugin/: SKILL.md
openclaw-plugin/.clawhub/: lock.json
openclaw-plugin/skills/clawseal/: SKILL.md  _meta.json
openclaw-plugin/skills/clawseal/.clawhub/: origin.json
